tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier3HV-AAAAAAAAAAAAAAAAAAAABQ==__ExperienceStorag-AAAAAAAAAAAAAAAAAAAApw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 167,
  "prerequisites": [
    990
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Dying is painful, isn't it? As almost all of your precious experience is lost. But fear not, there's a solution! By using an experience obelisk, you're now able to store all your collected experience in a safe location. Other than the other way of doing it that you could already do.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lExperience Storage",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    990
  ],
  "rewards": [],
  "tasks": []
}
