tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier3HV-AAAAAAAAAAAAAAAAAAAABQ==__FindIlmenite-AAAAAAAAAAAAAAAAAAAFkA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1424,
  "prerequisites": [
    162
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You actually get more Ilmenite from the Bauxite Vein. But maybe you are here for the Chromite?",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lFind Ilmenite",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    162
  ],
  "rewards": [],
  "tasks": []
}
