tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier3HV-AAAAAAAAAAAAAAAAAAAABQ==__FluidHeater-55XTBx8LRN2Ol_42LS6Mwg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2236957356656069826,
  "prerequisites": [
    1231
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You will need a Fluid Heater for some chemical processes, for the best fries, but also right now to make liquid sodium for NaK coolant. To proceed you will need either an MV or an HV Fluid Heater. Make one of them.\n\nThe HV one can be used later to better process bauxite after you have been to the moon.\n\n[note]If you used sodium sulfate to create liquid sodium instead, you can hold 2 60k NaK coolant cells in your hand to skip over this quest.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lFluid Heater",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1231
  ],
  "rewards": [],
  "tasks": []
}
