tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier3HV-AAAAAAAAAAAAAAAAAAAABQ==__Gettingthemostou-AAAAAAAAAAAAAAAAAAALog==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2978,
  "prerequisites": [
    1011
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If processed correctly you can get a lot more Gallium out of your Bauxite compared to just using the Thermal Centrifuge. You will also get large amounts of Rutile and Alumina.\n\nFirst, make some Bauxite Slurry.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lGetting the most out of your Bauxite.",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1011
  ],
  "rewards": [],
  "tasks": []
}
